--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 TELEGRAM_BOT_TOKEN=7706488866:AAH5rPfgUA0zDY_D3wqbcHc7DAxAfLgxQDE
+
+DB_HOST=postgres.railway.internal
+DB_PORT=5432
+DB_NAME=railway
+DB_USER=postgres
+DB_PASSWORD=kGpEjmOIpieMRTNeayqDURvaBOFaiKyU
