--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 TELEGRAM_BOT_TOKEN=7706488866:AAH5rPfgUA0zDY_D3wqbcHc7DAxAfLgxQDE
-
+WEBHOOK_URL=https://anti-spambottg.up.railway.app
 DB_HOST=postgres.railway.internal
 DB_PORT=5432
 DB_NAME=railway
